2005-05-17  Neal H. Walfield  <neal@gnu.org>

	* sysdeps/posix/getaddrinfo.c (gaih_local): Check [_HAVE_SA_LEN]
	instead of [SALEN].
	(gaih_inet): Likewise.

2005-05-11  Ulrich Drepper  <drepper@redhat.com>

	* elf/elf.h (Elf32_auxv_t): Make cross-compile safe.
	(Elf64_auxv_t): Likewise.
	* sysdeps/generic/dl-sysdep.c (_dl_sysdep_start): Adjust for
	removal of a_ptr element in ElfXX_auxv_t.
	* elf/dl-support.c (_dl_aux_init): Likewise.

2005-05-09  Daniel Jacobowitz  <dan@codesourcery.com>

	* sysdeps/unix/sysv/linux/clock_getres.c: Include <time.h>.
	* sysdeps/unix/sysv/linux/clock_gettime.c: Likewise.

2005-05-09  Alan Modra  <amodra@bigpond.net.au>

	* sysdeps/powerpc/powerpc64/dl-machine.h (RTLD_START): Use
	.pushsection/.popsection in place of .section/.previous.

2005-05-08  Ulrich Drepper  <drepper@redhat.com>

	* MakeTAGS: Make xgettext not look into test cases.

	* MakeTAGS: Make sure translations in error calls are marked with
	c-format by xgettext.

2005-05-07  Ulrich Drepper  <drepper@redhat.com>

	* intl/libintl.h: Always use __attribute_format_arg__ for gettext
	functions since gcc sometimes forgets the attribute for the
	standard functions.

2005-05-06  Jakub Jelinek  <jakub@redhat.com>

	[BZ #934]
	* posix/regex_internal.h: Include bits/libc-lock.h or define dummy
	__libc_lock_* macros if not _LIBC.
	(struct re_dfa_t): Add lock.
	* posix/regcomp.c (re_compile_internal): Add __libc_lock_init.
	* posix/regexec.c (regexec, re_search_stub): Add locking.

2005-05-04  Jakub Jelinek  <jakub@redhat.com>

	* intl/Makefile (tst-gettext[45].out): Pass also $(run-program-prefix)
	as argument to the scripts.
	* intl/tst-gettext2.sh: Use mkdir -p instead of test -d + mkdir.
	* intl/tst-gettext4.sh: Likewise.  Use run_program_prefix argument.
	* intl/tst-gettext5.sh: Likewise.

	* intl/tst-translit.sh: Add mkdir -p.

	* sysdeps/unix/sysv/linux/i386/sysdep.h (SETUP_PIC_REG): Use
	.ifndef/.endif to allow use of this macro more than once per .S
	file.